REFACTOR: Refactor weekly batch scheduler & Add monthly batch to create monthly stats