@@ -33,6 +33,7 @@ import org.springframework.transaction.PlatformTransactionManager;
 
 import java.time.Clock;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -94,7 +95,7 @@ public class GrantWeeklyRewardStep {
                 .pageSize(100)
                 .methodName("findAllByStatusIn")
                 .repository(memberRepository)
-                .arguments(List.of(MemberStatus.ACTIVE, MemberStatus.RANKING_BANNED))
+                .arguments(Collections.singletonList(List.of(MemberStatus.ACTIVE, MemberStatus.RANKING_BANNED)))
                 .sorts(Map.of("id", Sort.Direction.ASC))
                 .build();
     }
